--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "zf1/zend-service-audioscrobbler",
+	"name": "zf1s/zend-service-audioscrobbler",
 	"description": "Zend Framework 1 Service Audioscrobbler package",
 	"keywords": [
 		"framework",
@@ -12,13 +12,21 @@
 	"license": "BSD-3-Clause",
 	"require": {
 		"php": ">=5.2.11",
-		"zf1/zend-exception": "self.version",
-		"zf1/zend-http": "self.version",
-		"zf1/zend-xml": "self.version"
+		"zf1s/zend-exception": "^1.12",
+		"zf1s/zend-http": "^1.12",
+		"zf1s/zend-xml": "^1.12"
 	},
 	"autoload": {
 		"psr-0": {
 			"Zend_Service_Audioscrobbler": "library/"
+		}
+	},
+	"replace": {
+    	"zf1/zend-service-audioscrobbler": "^1.12"
+    },
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1.x-dev"
 		}
 	}
 }
