--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,26 @@
 {
-	"name": "zf1s/zend-service-audioscrobbler",
-	"description": "Zend Framework 1 Service Audioscrobbler package",
-	"keywords": [
-		"framework",
-		"zf1",
-		"zend",
-		"service",
-		"audioscrobbler"
-	],
-	"homepage": "http://framework.zend.com/",
-	"license": "BSD-3-Clause",
-	"require": {
-		"php": ">=5.2.11",
-		"zf1s/zend-exception": "^1.12",
-		"zf1s/zend-http": "^1.12",
-		"zf1s/zend-xml": "^1.12"
-	},
-	"autoload": {
-		"psr-0": {
-			"Zend_Service_Audioscrobbler": "library/"
-		}
-	},
-	"replace": {
-    	"zf1/zend-service-audioscrobbler": "^1.12"
+    "name": "zf1s/zend-service-audioscrobbler",
+    "description": "Zend Framework 1 Service Audioscrobbler package",
+    "keywords": ["framework", "zf1", "zend", "service", "audioscrobbler"],
+    "homepage": "http://framework.zend.com/",
+    "license": "BSD-3-Clause",
+    "require": {
+        "php": ">=5.3.3",
+        "zf1s/zend-exception": "^1.13",
+        "zf1s/zend-http": "^1.13",
+        "zf1s/zend-xml": "^1.13"
     },
-	"extra": {
-		"branch-alias": {
-			"dev-master": "1.x-dev"
-		}
-	}
+    "autoload": {
+        "psr-0": {
+            "Zend_Service_Audioscrobbler": "library/"
+        }
+    },
+    "replace": {
+        "zf1/zend-service-audioscrobbler": "^1.12"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
+    }
 }
