--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.3.3",
+        "ext-iconv": "*",
+        "ext-simplexml": "*",
         "zf1s/zend-exception": "^1.13",
         "zf1s/zend-http": "^1.13",
         "zf1s/zend-xml": "^1.13"
